--- a/app/views/nonprofits/home.html.erb
+++ b/app/views/nonprofits/home.html.erb
@@ -8,7 +8,7 @@
 <h2><i>Sector Focus: Breaking the Cycle of Poverty</i></h2>
 
 <p>Social Venture Partners Chicago seeks to invest our time, expertise, and funds over the next 3 years in a non-profit organization that is working to address breaking the cycle of poverty in the Chicagoland area.  We are especially interested in organizations with strong leaders and that are at an inflection point in their organizational lifecycle. Our aim is to partner with the selected organization to actively work to increase the capacity and scale of the organization, thereby measurably increasing the impact of their programs and services.</p>
-<p>We encourage your organization to submit this Letter of Interest if: </p>
+<p>We encourage your organization to submit <%= link_to "this Letter of Interest", "/letter_of_interest" %> if:</p>
 <ul>
   <li>Your organization’s primary focus is to address the cycle of poverty in Chicagoland.</li>
   <li>Your programs are scalable and replicable.</li>
@@ -16,3 +16,6 @@
   <li>Your budget is greater than $250,000 but less than $5,000,000.</li>
   <li>Your staff and board desire growth and hands-on assistance in building your organizational capacity in areas such as Strategic Planning, Board Development/Governance, Fund Development, Business Operations (including Accounting/Finance), Marketing, and Technology. </li>
 </ul>
+
+<p><%= link_to "Letter of Interest Form", "/letter_of_interest" %>
+</p>
