--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 
-<div class="container">
+<div class="container" ng-app="app">
   <%= link_to "Log in", "/users/sign_in" %>
   <%= yield %>
 </div>
