added render links for sign and out, register, based on current_user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
 
 <div class="container">
-  <%= link_to "Log in", "/users/sign_in" %>
+  <%= render 'devise/menu/registration_items' %>
+  <%= render 'devise/menu/login_items' %>
   <%= yield %>
 </div>
 
