--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -1,10 +1,27 @@
-<h2><%= @loi_form.name %></h2>
+<div ng-controller="LoiFormController" ng-init="setup()">
+    <script type="text/ng-template" id="loiModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">{{ loiForm.name }}</h3>
+        </div>
+        <div class="modal-body">
 
-<%= link_to @loi_form.email, @loi_form.email %> <br><br>
 
-<% @loi_form.answers.each do |answer| %>
-  <span>
-    <b><%= answer.question %>:</b>
-    <i><%= answer.answer %></i>
-  </span><br>
-<% end %>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="submitRating()">Submit</button>
+            <button class="btn btn-warning" type="button" ng-click="cancelRating()">Cancel</button>
+        </div>
+    </script>
+
+    <h2><%= @loi_form.name %>
+    <button type="button" class="btn btn-default" ng-click="openRatingModal()">Rate</button></h2>
+
+    <%= link_to @loi_form.email, @loi_form.email %> <br><br>
+
+    <% @loi_form.answers.each do |answer| %>
+        <span>
+            <b><%= answer.question %>:</b>
+            <i><%= answer.answer %></i>
+        </span><br>
+    <% end %>
+</div>
