--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -1,10 +1,9 @@
 <div ng-controller="LoiFormController" ng-init="setup()">
     <script type="text/ng-template" id="loiModalContent.html">
         <div class="modal-header">
-            <h3 class="modal-title">{{ loiForm.name }}</h3>
+            <h3 class="modal-title">Rate {{ loiForm.name }}</h3>
         </div>
         <div class="modal-body">
-
 
         </div>
         <div class="modal-footer">
@@ -13,15 +12,13 @@
         </div>
     </script>
 
-    <h2><%= @loi_form.name %>
+    <h2>{{ loiForm.name }}
     <button type="button" class="btn btn-default" ng-click="openRatingModal()">Rate</button></h2>
 
-    <%= link_to @loi_form.email, @loi_form.email %> <br><br>
+    <p>{{ loiForm.email }}</p> <br>
 
-    <% @loi_form.answers.each do |answer| %>
-        <span>
-            <b><%= answer.question %>:</b>
-            <i><%= answer.answer %></i>
-        </span><br>
-    <% end %>
+    <span ng-repeat="answer in loiForm.answers">
+        <b>{{ answer.question }}: </b>
+        <i>{{ answer.answer }}</i><br>
+    </span>
 </div>
