removed registration link from layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 
 <div class="container">
-  <%= render 'devise/menu/registration_items' %>
+  <!-- # <%= render 'devise/menu/registration_items' %> -->
   <%= render 'devise/menu/login_items' %>
   <%= yield %>
 </div>
