--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -1,2 +1,42 @@
-<h1>Nonprofits#loi_form</h1>
-<p>Find me in app/views/nonprofits/loi_form.html.erb</p>
+<h1>2016 SVP Chicago Letter of Interest </h1>
+<h2>Sector Focus:  Breaking the Cycle of Poverty</h2>
+<h3>Completing this Form:</h3>
+<p>Please enter information directly into the form, using this form as the main body of your Letter of Interest.</p>
+<ul>
+  <li>If you find an item confusing, please feel free to contact us.</li>
+  <li>Please use bullet points rather than paragraphs.</li>
+  <li>Brevity is helpful to our partners when reviewing proposals.</li>
+</ul>
+<h3 class="form-title">1. Contact Information</h3>
+
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="organization">Organization:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="organization" placeholder="Enter organization name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="address">Address:</label>
+      <div class="col-sm-10">          
+        <input type="text" class="form-control" id="address" placeholder="Enter street address">
+      </div>
+    </div>
+    <hr>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="submit" class="btn btn-default">Submit</button>
+      </div>
+    </div>
+  </form>
+
+
+Address:
+Phone:
+Website:
+Executive Director:
+Proposal Contact (Name and Title):
+Phone:
+E-mail:
+Phone:
+E-mail:
