--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -17,11 +17,69 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="address">Address:</label>
+      <label class="control-label col-sm-2" for="website">Address:</label>
       <div class="col-sm-10">          
         <input type="text" class="form-control" id="address" placeholder="Enter street address">
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="phone">Phone:</label>
+      <div class="col-sm-10">          
+        <input type="tel" class="form-control" id="phone" placeholder="( ___ ) ___ - ____">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="website">Website:</label>
+      <div class="col-sm-10"> 
+        <input type="url" class="form-control" id="website" placeholder="https://">
+      </div>
+    </div>
+    <hr>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="executive">Executive Director:</label>
+      <div class="col-sm-10"> 
+        <input type="text" class="form-control" id="executive" placeholder="Enter name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="executive_phone">Phone:</label>
+      <div class="col-sm-10"> 
+        <input type="tel" class="form-control" id="executive_phone" placeholder="Enter phone">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="executive_email">Email:</label>
+      <div class="col-sm-10"> 
+        <input type="email" class="form-control" id="executive_email" placeholder="Enter email address">
+      </div>
+    </div>
+    <hr>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="contact">Proposal Contact:</label>
+      <div class="col-sm-10"> 
+        <input type="text" class="form-control" id="contact" placeholder="Enter name and title">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="contact_phone">Phone:</label>
+      <div class="col-sm-10"> 
+        <input type="tel" class="form-control" id="contact_phone" placeholder="Enter phone">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="contact_email">Email:</label>
+      <div class="col-sm-10"> 
+        <input type="email" class="form-control" id="contact_email" placeholder="Enter email">
+      </div>
+    </div>
+
+
+
+
+
+
+
+
     <hr>
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
@@ -29,14 +87,3 @@
       </div>
     </div>
   </form>
-
-
-Address:
-Phone:
-Website:
-Executive Director:
-Proposal Contact (Name and Title):
-Phone:
-E-mail:
-Phone:
-E-mail:
