--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -25,7 +25,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="phone">Phone:</label>
       <div class="col-sm-10">          
-        <input type="tel" class="form-control" id="phone" placeholder="( ___ ) ___ - ____">
+        <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
       </div>
     </div>
     <div class="form-group">
@@ -67,11 +67,80 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="contact_email">Email:</label>
+      <label class="control-label col-sm-2" for="employees">Email:</label>
       <div class="col-sm-10"> 
         <input type="email" class="form-control" id="contact_email" placeholder="Enter email">
       </div>
     </div>
+<hr>    
+<h3 class="form-title">2. Organization</h3>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="employees">Employees:</label>
+      <div class="col-sm-10"> 
+        <input type="number" class="form-control" id="employees" placeholder="Enter total number">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="volunteers">Volunteers:</label>
+      <div class="col-sm-10"> 
+        <input type="number" class="form-control" id="volunteers" placeholder="Enter total number">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="board">Active Board Members:</label>
+      <div class="col-sm-10"> 
+        <input type="number" class="form-control" id="board" placeholder="Enter total number">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="board">Total annual budget for organization:</label>
+      <div class="col-sm-10"> 
+        <input type="text" class="form-control" id="board" placeholder="Enter annual budget">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="affiliated">If affiliated with a national or parent organization, what role does the organization play in your strategic direction, operations, and overall governance?</label>
+      <div class="col-sm-10"> 
+        <textarea type="text" class="form-control" rows="7" id="affiliated" maxlength="150" placeholder="Role of Affiliations: limit to 150 characters."></textarea>
+      </div>
+    </div>
+<hr>
+<h3 class="form-title">3. Overview and Mission</h3>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="mission">Provide a <em>brief</em> summary of your organization’s mission and history. Please provide your organization’s mission statement, if you have one.</label>
+      <div class="col-sm-10"> 
+        <textarea type="text" class="form-control" rows="7" id="mission" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+      </div>
+    </div>
+<hr>
+<h3 class="form-title">4. Vision</h3>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="vision">What is your organization’s vision and what do you hope to accomplish over the next three years?</label>
+      <div class="col-sm-10"> 
+        <textarea type="text" class="form-control" rows="7" id="vision" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+      </div>
+    </div>
+
+<hr>
+<h3 class="form-title">5. Key Concerns</h3>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="concerns">Short description (preferably bullets) of the 1-3 things that keep you up at night.</label>
+      <div class="col-sm-10"> 
+        <textarea type="text" class="form-control" rows="7" id="concerns" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+      </div>
+    </div>
+
+
+
+
 
 
 
