--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -78,21 +78,21 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="employees">Employees:</label>
       <div class="col-sm-10"> 
-        <input type="number" class="form-control" id="employees" placeholder="Enter total number">
+        <input type="number" class="form-control" id="employees" placeholder="Enter total number" min="0">
       </div>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="volunteers">Volunteers:</label>
       <div class="col-sm-10"> 
-        <input type="number" class="form-control" id="volunteers" placeholder="Enter total number">
+        <input type="number" class="form-control" id="volunteers" placeholder="Enter total number" min="0">
       </div>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="board">Active Board Members:</label>
       <div class="col-sm-10"> 
-        <input type="number" class="form-control" id="board" placeholder="Enter total number">
+        <input type="number" class="form-control" id="board" placeholder="Enter total number" min="0">
       </div>
     </div>
 
@@ -115,7 +115,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="mission">Provide a <em>brief</em> summary of your organization’s mission and history. Please provide your organization’s mission statement, if you have one.</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" id="mission" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+        <textarea type="text" class="form-control" rows="7" id="mission" maxlength="150" placeholder="Mission and history: limit to 150 characters."></textarea>
       </div>
     </div>
 <hr>
@@ -124,7 +124,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="vision">What is your organization’s vision and what do you hope to accomplish over the next three years?</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" id="vision" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+        <textarea type="text" class="form-control" rows="7" id="vision" maxlength="150" placeholder="Vision: limit to 150 characters."></textarea>
       </div>
     </div>
 
@@ -134,7 +134,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="concerns">Short description (preferably bullets) of the 1-3 things that keep you up at night.</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" id="concerns" maxlength="150" placeholder="Limit to 150 characters."></textarea>
+        <textarea type="text" class="form-control" rows="7" id="concerns" maxlength="150" placeholder="Concerns: limit to 150 characters."></textarea>
       </div>
     </div>
 
