Setup AJAX call to create rating for an LoiForm.

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -10,11 +10,11 @@
                     <td class="col-md-6">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group">
-                                <label class="btn btn-default" ng-model="ratings[0]" uib-btn-radio="1">1</label>
-                                <label class="btn btn-default" ng-model="ratings[0]" uib-btn-radio="2">2</label>
-                                <label class="btn btn-default" ng-model="ratings[0]" uib-btn-radio="3">3</label>
-                                <label class="btn btn-default" ng-model="ratings[0]" uib-btn-radio="4">4</label>
-                                <label class="btn btn-default" ng-model="ratings[0]" uib-btn-radio="5">5</label>
+                                <label class="btn btn-default" ng-model="ratings['q1']" uib-btn-radio="1">1</label>
+                                <label class="btn btn-default" ng-model="ratings['q1']" uib-btn-radio="2">2</label>
+                                <label class="btn btn-default" ng-model="ratings['q1']" uib-btn-radio="3">3</label>
+                                <label class="btn btn-default" ng-model="ratings['q1']" uib-btn-radio="4">4</label>
+                                <label class="btn btn-default" ng-model="ratings['q1']" uib-btn-radio="5">5</label>
                             </div>
                         </div>
                     </td>
@@ -24,11 +24,11 @@
                     <td class="col-md-6">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group" role="group">
-                                <label class="btn btn-default" ng-model="ratings[1]" uib-btn-radio="1">1</label>
-                                <label class="btn btn-default" ng-model="ratings[1]" uib-btn-radio="2">2</label>
-                                <label class="btn btn-default" ng-model="ratings[1]" uib-btn-radio="3">3</label>
-                                <label class="btn btn-default" ng-model="ratings[1]" uib-btn-radio="4">4</label>
-                                <label class="btn btn-default" ng-model="ratings[1]" uib-btn-radio="5">5</label>
+                                <label class="btn btn-default" ng-model="ratings['q2']" uib-btn-radio="1">1</label>
+                                <label class="btn btn-default" ng-model="ratings['q2']" uib-btn-radio="2">2</label>
+                                <label class="btn btn-default" ng-model="ratings['q2']" uib-btn-radio="3">3</label>
+                                <label class="btn btn-default" ng-model="ratings['q2']" uib-btn-radio="4">4</label>
+                                <label class="btn btn-default" ng-model="ratings['q2']" uib-btn-radio="5">5</label>
                             </div>
                         </div>
                     </td>
@@ -38,11 +38,11 @@
                     <td class="col-md-6">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group" role="group">
-                                <label class="btn btn-default" ng-model="ratings[2]" uib-btn-radio="1">1</label>
-                                <label class="btn btn-default" ng-model="ratings[2]" uib-btn-radio="2">2</label>
-                                <label class="btn btn-default" ng-model="ratings[2]" uib-btn-radio="3">3</label>
-                                <label class="btn btn-default" ng-model="ratings[2]" uib-btn-radio="4">4</label>
-                                <label class="btn btn-default" ng-model="ratings[2]" uib-btn-radio="5">5</label>
+                                <label class="btn btn-default" ng-model="ratings['q3']" uib-btn-radio="1">1</label>
+                                <label class="btn btn-default" ng-model="ratings['q3']" uib-btn-radio="2">2</label>
+                                <label class="btn btn-default" ng-model="ratings['q3']" uib-btn-radio="3">3</label>
+                                <label class="btn btn-default" ng-model="ratings['q3']" uib-btn-radio="4">4</label>
+                                <label class="btn btn-default" ng-model="ratings['q3']" uib-btn-radio="5">5</label>
                             </div>
                         </div>
                     </td>
@@ -52,11 +52,11 @@
                     <td class="col-md-6">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group" role="group">
-                                <label class="btn btn-default" ng-model="ratings[3]" uib-btn-radio="1">1</label>
-                                <label class="btn btn-default" ng-model="ratings[3]" uib-btn-radio="2">2</label>
-                                <label class="btn btn-default" ng-model="ratings[3]" uib-btn-radio="3">3</label>
-                                <label class="btn btn-default" ng-model="ratings[3]" uib-btn-radio="4">4</label>
-                                <label class="btn btn-default" ng-model="ratings[3]" uib-btn-radio="5">5</label>
+                                <label class="btn btn-default" ng-model="ratings['q4']" uib-btn-radio="1">1</label>
+                                <label class="btn btn-default" ng-model="ratings['q4']" uib-btn-radio="2">2</label>
+                                <label class="btn btn-default" ng-model="ratings['q4']" uib-btn-radio="3">3</label>
+                                <label class="btn btn-default" ng-model="ratings['q4']" uib-btn-radio="4">4</label>
+                                <label class="btn btn-default" ng-model="ratings['q4']" uib-btn-radio="5">5</label>
                             </div>
                         </div>
                     </td>
@@ -66,9 +66,9 @@
                     <td class="col-md-6">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group" role="group">
-                                <label class="btn btn-default" ng-model="ratings[4]" uib-btn-radio="'Yes'">Yes</label>
-                                <label class="btn btn-default" ng-model="ratings[4]" uib-btn-radio="'Maybe'">Maybe</label>
-                                <label class="btn btn-default" ng-model="ratings[4]" uib-btn-radio="'No'">No</label>
+                                <label class="btn btn-default" ng-model="ratings['q5']" uib-btn-radio="'Yes'">Yes</label>
+                                <label class="btn btn-default" ng-model="ratings['q5']" uib-btn-radio="'Maybe'">Maybe</label>
+                                <label class="btn btn-default" ng-model="ratings['q5']" uib-btn-radio="'No'">No</label>
                             </div>
                         </div>
                     </td>
