added grid to section 6, for first two focus areas

--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -138,10 +138,177 @@
       </div>
     </div>
 
+<hr>
+<h3 class="form-title">6. Organizational Capacity Challenges</h3>
+
+<div class="row">
+  <div class="col-md-9"></div>
+  <div class="col-md-3">Please provide the total amount of time you and your staff spend in each focus area expressed in FTEs: </div>
+</div>
+<br>
+<div class="row form-title">
+  <!-- <div class="col-md-1"></div> -->
+  <div class="col-md-2">Focus Area</div>
+  <div class="col-md-5">Please provide a short description (preferably bullets) of your top 1-3 challenge(s) in each area that applies</div>
+  <div class="col-md-2"><strong>Priority:</strong> Rank each as high, medium, or low</div>
+  <div class="col-md-1">2015 Staffing (actual)</div>
+  <div class="col-md-1">2016 Staffing (current)</div>
+  <div class="col-md-1">2017 Staffing (projected)</div>
+</div>
+
+<hr>
+
+<div class="well"><h4>Board Development &amp; Governance</h4></div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="board_challenge_1" placeholder="1. Enter a board challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="board_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_board_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_board_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_board_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="board_challenge_2" placeholder="2. Enter a board challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_board_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_board_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_board_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="board_challenge_3" placeholder="3. Enter a board challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_board_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_board_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_board_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
 
 
+<hr>
 
+<div class="well"><h4>Business Operations (Accounting, HR,
+ Purchasing, Legal)</h4></div>
 
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="operations_challenge_1" placeholder="1. Enter a business operations challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="operations_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_operations_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_operations_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_operations_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="operations_challenge_2" placeholder="2. Enter a business operations challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_operations_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_operations_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_operations_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="operations_challenge_3" placeholder="3. Enter a business operations challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_operations_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_operations_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_operations_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
 
 
 
