--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -18,6 +18,7 @@
                             </div>
                         </div>
                     </td>
+                    <td class="col-md-4" ng-if="invalid[1]"><h5>Field Required!</h5></td>
                 </tr>
                 <tr>
                     <td class="col-md-6"><h4>SVP's Potential Impact</h4></td>
@@ -32,6 +33,7 @@
                             </div>
                         </div>
                     </td>
+                    <td class="col-md-4" ng-if="invalid[2]"><h5>Field Required!</h5></td>
                 </tr>
                 <tr>
                     <td class="col-md-6"><h4>Level of Excitement</h4></td>
@@ -46,6 +48,7 @@
                             </div>
                         </div>
                     </td>
+                    <td class="col-md-4" ng-if="invalid[3]"><h5>Field Required!</h5></td>
                 </tr>
                 <tr>
                     <td class="col-md-6"><h4>Benefit to SVP Chicago</h4></td>
@@ -60,10 +63,11 @@
                             </div>
                         </div>
                     </td>
+                    <td class="col-md-4" ng-if="invalid[4]"><h5>Field Required!</h5></td>
                 </tr>
                 <tr>
-                    <td class="col-md-6"><h4>Invite to Submit RFP?</h4></td>
-                    <td class="col-md-6">
+                    <td class="col-md-4"><h4>Invite to Submit RFP?</h4></td>
+                    <td class="col-md-4">
                         <div class="btn-toolbar" role="toolbar">
                             <div class="btn-group" role="group">
                                 <label class="btn btn-default" ng-model="ratings['q5']" uib-btn-radio="'Yes'">Yes</label>
@@ -72,6 +76,7 @@
                             </div>
                         </div>
                     </td>
+                    <td class="col-md-4" ng-if="invalid[5]"><h5>Field Required!</h5></td>
                 </tr>
             </table>
             </div>
