--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -310,14 +310,456 @@
   </div>
 </div>
 
+<hr>
 
+<div class="well"><h4>Fund Development</h4></div>
 
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="fund_challenge_1" placeholder="1. Enter a fund development challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="fund_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_fund_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_fund_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_fund_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="fund_challenge_2" placeholder="2. Enter a fund development challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_fund_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_fund_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_fund_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="fund_challenge_3" placeholder="3. Enter a fund development challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_fund_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_fund_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_fund_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<hr>
+
+<div class="well"><h4>Marketing</h4></div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="marketing_challenge_1" placeholder="1. Enter a marketing challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="marketing_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_marketing_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_marketing_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_marketing_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="marketing_challenge_2" placeholder="2. Enter a marketing challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_marketing_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_marketing_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_marketing_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="marketing_challenge_3" placeholder="3. Enter a marketing challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_marketing_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_marketing_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_marketing_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<hr>
+
+<div class="well"><h4>Strategic Planning</h4></div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="strategic_challenge_1" placeholder="1. Enter a strategic planning challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="strategic_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_strategic_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_strategic_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_strategic_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_strategic_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_strategic_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_strategic_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_strategic_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_strategic_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_strategic_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+<hr>
+
+<div class="well"><h4>Technology</h4></div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="technology_challenge_1" placeholder="1. Enter a technology challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="technology_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_technology_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_technology_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_technology_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="technology_challenge_2" placeholder="2. Enter a technology challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_technology_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_technology_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_technology_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="technology_challenge_3" placeholder="3. Enter a technology challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_technology_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_technology_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_technology_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+<hr>
+
+<div class="well"><h4>Other</h4></div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="other_challenge_1" placeholder="1. Enter other challenge">
+  </div>
+  <div class="col-md-2">
+    <select id="other_1_priority" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_other_1" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_other_1" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_other_1" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="other_challenge_2" placeholder="2. Enter other challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_other_2" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_other_2" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_other_2" placeholder="FTEs (projected)" min="0">
+  </div>
+</div> 
+
+<div class="row form-group">
+  <div class="col-md-2"></div>
+  <div class="col-md-5">
+    <input type="text" class="form-control" id="other_challenge_3" placeholder="3. Enter other challenge">
+  </div>
+  <div class="col-md-2">
+    <select name="cars" class="form-control">
+      <option value="">Select priority</option>
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_other_3" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_other_3" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_other_3" placeholder="FTEs (projected)" min="0">
+  </div>
+</div>
+
+<hr>
+<h3 class="form-title">7. Referral Source</h3>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="referral">How did you learn of the opportunity to present an LOI to SVP Chicago?</label>
+      <div class="col-sm-10"> 
+        <textarea type="text" class="form-control" rows="7" id="referral" maxlength="80" placeholder="Enter referral source"></textarea>
+      </div>
+    </div>
+
+<hr>
+<h3 class="form-title">8. Demographics</h3>
+<p>Please answer the following questions to help us track the types of organizations that choose to apply for this opportunity.</p>
+<h4>Check the box if you have programs addressing the sector:</h4>
+
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="addiction">Alcoholism &amp; Addiction</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="education">Education</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="elderly">Elderly Care</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="food">Food</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="health">Health &amp; Medical</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="homeless">Homelessness</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="jobs">Jobs Programs</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="mental">Mental Health</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="parent">Pregnancy &amp; Parenting</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="violence">Violence &amp; Abuse</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" value="" id="other">Other</label>
+  <input type="text" id="other_description" placeholder="(Please specify)">
+</div>
+<hr> 
+
+<div class="row">
+<h4>Please select your geographic focus. If more than one, pick one based on your main program.</h4>
+  <div class="col-md-5">
+    <select id="geo_focus" class="form-control">
+      <option value="">Select geographic focus</option>
+      <option value="city">City of Chicago</option>
+      <option value="land">Chicagoland</option>
+      <option value="beyond">Chicago and Beyond</option>
+      <option value="specific">Neighborhood/Area Specific</option>
+    </select>
+  </div>
+  <div class="col-md-5">
+    <input class="form-control" type="text" id="other_description" placeholder="(If Neightborhood/Area, please specify)">
+  </div>
+</div>
 
 
 
 
     <hr>
-    <div class="form-group">        
+    <div class="form-group pull-right">        
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-default">Submit</button>
       </div>
