added link to loi form index and removed console log from layout

--- a/app/views/nonprofits/home.html.erb
+++ b/app/views/nonprofits/home.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? %>
+  <p class="pull-right"><a href="/loi_forms">View Submitted LOI Forms</a></p>
+<% end %>
 <h1>Welcome to SVP Chicago!</h1>
 
 <p>Social Venture Partners Chicago invests time, expertise and money in innovative nonprofits that have the potential to make meaningful and sustainable improvements within the Chicagoland community.</p>
