moved the FTE section up to the top of each section

--- a/app/views/partials/_challenges_strategic.html.erb
+++ b/app/views/partials/_challenges_strategic.html.erb
@@ -1,4 +1,16 @@
-<div class="well"><h4>Strategic Planning</h4></div>
+<div class="row">
+  <div class="well col-md-9"><h4>Strategic Planning</h4></div><br>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_strategic" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_strategic" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_strategic" placeholder="FTEs (projected)" min="0">
+  </div>
+  <br>
+</div>
 
 <div class="row form-group">
   <div class="col-md-2"></div>
@@ -12,15 +24,6 @@
       <option value="medium">Medium</option>
       <option value="low">Low</option>
     </select>
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_strategic_1" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_strategic_1" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_strategic_1" placeholder="FTEs (projected)" min="0">
   </div>
 </div>
 
@@ -37,15 +40,6 @@
       <option value="low">Low</option>
     </select>
   </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_strategic_2" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_strategic_2" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_strategic_2" placeholder="FTEs (projected)" min="0">
-  </div>
 </div> 
 
 <div class="row form-group">
@@ -60,15 +54,6 @@
       <option value="medium">Medium</option>
       <option value="low">Low</option>
     </select>
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_strategic_3" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_strategic_3" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_strategic_3" placeholder="FTEs (projected)" min="0">
   </div>
 </div>
 <hr>
