--- a/app/views/partials/_challenges_fund.html.erb
+++ b/app/views/partials/_challenges_fund.html.erb
@@ -1,5 +1,16 @@
-<div class="well"><h4>Fund Development</h4></div>
-
+<div class="row">
+  <div class="well col-md-9"><h4>Fund Development</h4></div><br>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_fund" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_fund" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_fund" placeholder="FTEs (projected)" min="0">
+  </div>
+  <br>
+</div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
@@ -13,15 +24,7 @@
       <option value="low">Low</option>
     </select>
   </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_fund_1" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_fund_1" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_fund_1" placeholder="FTEs (projected)" min="0">
-  </div>
+  <br>
 </div>
 
 <div class="row form-group">
