--- a/app/views/partials/_challenges_marketing.html.erb
+++ b/app/views/partials/_challenges_marketing.html.erb
@@ -1,5 +1,16 @@
-<div class="well"><h4>Marketing</h4></div>
-
+<div class="row">
+  <div class="well col-md-9"><h4>Marketing</h4></div><br>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="actual_staff_marketing" placeholder="FTEs (actual)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="current_staff_marketing" placeholder="FTEs (current)" min="0">
+  </div>
+  <div class="col-md-1">
+    <input type="number" class="form-control" id="projected_staff_marketing" placeholder="FTEs (projected)" min="0">
+  </div>
+  <br>
+</div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
@@ -12,15 +23,6 @@
       <option value="medium">Medium</option>
       <option value="low">Low</option>
     </select>
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_marketing_1" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_marketing_1" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_marketing_1" placeholder="FTEs (projected)" min="0">
   </div>
 </div>
 
@@ -37,15 +39,6 @@
       <option value="low">Low</option>
     </select>
   </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_marketing_2" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_marketing_2" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_marketing_2" placeholder="FTEs (projected)" min="0">
-  </div>
 </div> 
 
 <div class="row form-group">
@@ -60,15 +53,6 @@
       <option value="medium">Medium</option>
       <option value="low">Low</option>
     </select>
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_marketing_3" placeholder="FTEs (actual)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_marketing_3" placeholder="FTEs (current)" min="0">
-  </div>
-  <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_marketing_3" placeholder="FTEs (projected)" min="0">
   </div>
 </div>
 
