added additional info section

--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -35,6 +35,7 @@
 <%= render partial: "partials/challenges_other" %>
 
 <!-- additional comments section 7 -->
+<%= render partial: "partials/additional" %>
 
 <!-- section 8 -->
 <%= render partial: "partials/referral" %>
