Changed authenicate_user! method to authenticate_admin!, due to conflict with Devise. Other misc additions.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
 <div class="container" ng-app="app">
   <!-- # <%= render 'devise/menu/registration_items' %> -->
   <%= render 'devise/menu/login_items' %>
+  <% if user_signed_in? %>
+    <%= link_to "Change your password", edit_user_registration_path %>
+  <% end %>
+
   <%= yield %>
+
+
 
 </div>
 
