corrections to form input ids

--- a/app/views/partials/_challenges_operations.html.erb
+++ b/app/views/partials/_challenges_operations.html.erb
@@ -4,13 +4,13 @@
   </div>
   <br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_operations_1" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" id="actual_staff_operations" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_operations_1" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" id="current_staff_operations" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_operations_1" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" id="projected_staff_operations" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
