--- a/app/views/partials/_challenges_technology.html.erb
+++ b/app/views/partials/_challenges_technology.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Technology</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_technology_1" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" id="actual_staff_technology" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_technology_1" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" id="current_staff_technology" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_technology_1" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" id="projected_staff_technology" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
