--- a/app/views/partials/_demographics.html.erb
+++ b/app/views/partials/_demographics.html.erb
@@ -3,38 +3,38 @@
 <h4>Please select the sectors that your programs address:</h4>
 <div class="padded">
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="addiction">Alcoholism &amp; Addiction</label>
+    <label><input type="checkbox" name="sectors" value="addiction">Alcoholism &amp; Addiction</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="education">Education</label>
+    <label><input type="checkbox" name="sectors" value="education">Education</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="elderly">Elderly Care</label>
+    <label><input type="checkbox" name="sectors" value="elderly">Elderly Care</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="food">Food</label>
+    <label><input type="checkbox" name="sectors" value="food">Food</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="health">Health &amp; Medical</label>
+    <label><input type="checkbox" name="sectors" value="health">Health &amp; Medical</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="homeless">Homelessness</label>
+    <label><input type="checkbox" name="sectors" value="homeless">Homelessness</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="jobs">Jobs Programs</label>
+    <label><input type="checkbox" name="sectors" value="jobs">Jobs Programs</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="mental">Mental Health</label>
+    <label><input type="checkbox" name="sectors" value="mental">Mental Health</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="parent">Pregnancy &amp; Parenting</label>
+    <label><input type="checkbox" name="sectors" value="parent">Pregnancy &amp; Parenting</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="violence">Violence &amp; Abuse</label>
+    <label><input type="checkbox" name="sectors" value="violence">Violence &amp; Abuse</label>
   </div>
   <div class="checkbox">
-    <label><input type="checkbox" value="" id="other">Other</label>
-    <input type="text" id="other_description" placeholder="(Please specify)">
+    <label><input type="checkbox" name="sectors" value="other">Other</label>
+    <input type="text" id="other_sector" placeholder="(Please specify)">
   </div>
 </div>
 <hr> 
