--- a/app/views/partials/_geographical.html.erb
+++ b/app/views/partials/_geographical.html.erb
@@ -10,7 +10,7 @@
     </select>
   </div>
   <div class="col-md-5">
-    <input class="form-control" type="text" id="other_description" placeholder="(If Neightborhood/Area, please specify)">
+    <input class="form-control" type="text" id="other_geo_focus" placeholder="(If Neightborhood/Area, please specify)">
   </div>
 </div>
 <hr>
