--- a/app/views/partials/_contact_info.html.erb
+++ b/app/views/partials/_contact_info.html.erb
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="employees">Email:</label>
+      <label class="control-label col-sm-2" for="contact_email">Email:</label>
       <div class="col-sm-10"> 
         <input type="email" class="form-control" id="contact_email" placeholder="Enter email">
       </div>
