--- a/app/views/partials/_organization.html.erb
+++ b/app/views/partials/_organization.html.erb
@@ -22,9 +22,9 @@
     </div>
 
     <div class="form-group">
-      <label class="control-label col-sm-2" for="board">Total annual budget for organization:</label>
+      <label class="control-label col-sm-2" for="budget">Total annual budget for organization:</label>
       <div class="col-sm-10"> 
-        <input type="text" class="form-control" id="board" placeholder="Enter annual budget">
+        <input type="text" class="form-control" id="budget" placeholder="Enter annual budget">
       </div>
     </div>
 
