added post route and controller action for loi form

--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -7,7 +7,7 @@
   <li>Please use bullet points rather than paragraphs.</li>
   <li>Brevity is helpful to our partners when reviewing proposals.</li>
 </ul>
-<form class="form-horizontal" role="form" method="post" action="/">
+<form class="form-horizontal" role="form" method="post" action="/letter_of_interest">
 
 <!-- section 1 -->
 <%= render partial: "partials/contact_info" %>
