changed id to name in input fields

--- a/app/views/partials/_challenges_other.html.erb
+++ b/app/views/partials/_challenges_other.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Other</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_other" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_other" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_other" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_other" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_other" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_other" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
@@ -15,10 +15,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="other_challenge_1" placeholder="1. Enter other challenge">
+    <input type="text" class="form-control" name="other_challenge_1" placeholder="1. Enter other challenge">
   </div>
   <div class="col-md-2">
-    <select id="other_1_priority" class="form-control">
+    <select name="other_1_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -30,10 +30,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="other_challenge_2" placeholder="2. Enter other challenge">
+    <input type="text" class="form-control" name="other_challenge_2" placeholder="2. Enter other challenge">
   </div>
   <div class="col-md-2">
-    <select id="other_2_priority" class="form-control">
+    <select name="other_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -45,10 +45,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="other_challenge_3" placeholder="3. Enter other challenge">
+    <input type="text" class="form-control" name="other_challenge_3" placeholder="3. Enter other challenge">
   </div>
   <div class="col-md-2">
-    <select id="other_3_priority" class="form-control">
+    <select name="other_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
