--- a/app/views/partials/_geographical.html.erb
+++ b/app/views/partials/_geographical.html.erb
@@ -1,7 +1,7 @@
 <h4>Please select your geographic focus. If more than one, pick one based on your main program.</h4>
 <div class="row">
   <div class="col-md-5">
-    <select id="geo_focus" class="form-control">
+    <select name="geo_focus" class="form-control">
       <option value="">Select geographic focus</option>
       <option value="city">City of Chicago</option>
       <option value="land">Chicagoland</option>
@@ -10,7 +10,7 @@
     </select>
   </div>
   <div class="col-md-5">
-    <input class="form-control" type="text" id="other_geo_focus" placeholder="(If Neightborhood/Area, please specify)">
+    <input class="form-control" type="text" name="other_geo_focus" placeholder="(If Neightborhood/Area, please specify)">
   </div>
 </div>
 <hr>
