--- a/app/views/partials/_overview_mission.html.erb
+++ b/app/views/partials/_overview_mission.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="mission">Provide a <em>brief</em> summary of your organization’s mission and history. Please provide your organization’s mission statement, if you have one.</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" id="mission" maxlength="150" placeholder="Mission and history: limit to 150 characters."></textarea>
+        <textarea type="text" class="form-control" rows="7" name="mission" maxlength="150" placeholder="Mission and history: limit to 150 characters."></textarea>
       </div>
     </div>
 <hr>
