--- a/app/views/partials/_referral.html.erb
+++ b/app/views/partials/_referral.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="referral">How did you learn of the opportunity to present an LOI to SVP Chicago?</label>
       <div class="col-sm-10"> 
-        <textarea type="text" class="form-control" rows="7" id="referral" maxlength="80" placeholder="Enter referral source"></textarea>
+        <textarea type="text" class="form-control" rows="7" name="referral" maxlength="80" placeholder="Enter referral source"></textarea>
       </div>
     </div>
 
