--- a/app/views/partials/_challenges_board.html.erb
+++ b/app/views/partials/_challenges_board.html.erb
@@ -4,13 +4,13 @@
   </div>
   <br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_board" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_board" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_board" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_board" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_board" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_board" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
@@ -18,10 +18,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="board_challenge_1" placeholder="1. Enter a board challenge">
+    <input type="text" class="form-control" name="board_challenge_1" placeholder="1. Enter a board challenge">
   </div>
   <div class="col-md-2">
-    <select id="board_1_priority" class="form-control">
+    <select name="board_1_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -33,10 +33,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="board_challenge_2" placeholder="2. Enter a board challenge">
+    <input type="text" class="form-control" name="board_challenge_2" placeholder="2. Enter a board challenge">
   </div>
   <div class="col-md-2">
-    <select id="board_2_priority" class="form-control">
+    <select name="board_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -48,10 +48,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="board_challenge_3" placeholder="3. Enter a board challenge">
+    <input type="text" class="form-control" name="board_challenge_3" placeholder="3. Enter a board challenge">
   </div>
   <div class="col-md-2">
-    <select id="board_3_priority" class="form-control">
+    <select name="board_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
