--- a/app/views/partials/_challenges_fund.html.erb
+++ b/app/views/partials/_challenges_fund.html.erb
@@ -1,23 +1,23 @@
 <div class="row">
   <div class="well col-md-9"><h4>Fund Development</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_fund" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_fund" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_fund" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_fund" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_fund" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_fund" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="fund_challenge_1" placeholder="1. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_1" placeholder="1. Enter a fund development challenge">
   </div>
   <div class="col-md-2">
-    <select id="fund_1_priority" class="form-control">
+    <select name="fund_1_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -30,10 +30,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="fund_challenge_2" placeholder="2. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_2" placeholder="2. Enter a fund development challenge">
   </div>
   <div class="col-md-2">
-    <select id="fund_2_priority" class="form-control">
+    <select name="fund_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -45,10 +45,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="fund_challenge_3" placeholder="3. Enter a fund development challenge">
+    <input type="text" class="form-control" name="fund_challenge_3" placeholder="3. Enter a fund development challenge">
   </div>
   <div class="col-md-2">
-    <select id="fund_3_priority" class="form-control">
+    <select name="fund_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
