--- a/app/views/partials/_challenges_marketing.html.erb
+++ b/app/views/partials/_challenges_marketing.html.erb
@@ -1,23 +1,23 @@
 <div class="row">
   <div class="well col-md-9"><h4>Marketing</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_marketing" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_marketing" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_marketing" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_marketing" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_marketing" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_marketing" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="marketing_challenge_1" placeholder="1. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_1" placeholder="1. Enter a marketing challenge">
   </div>
   <div class="col-md-2">
-    <select id="marketing_1_priority" class="form-control">
+    <select name="marketing_1_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -29,10 +29,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="marketing_challenge_2" placeholder="2. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_2" placeholder="2. Enter a marketing challenge">
   </div>
   <div class="col-md-2">
-    <select id="marketing_2_priority" class="form-control">
+    <select name="marketing_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -44,10 +44,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="marketing_challenge_3" placeholder="3. Enter a marketing challenge">
+    <input type="text" class="form-control" name="marketing_challenge_3" placeholder="3. Enter a marketing challenge">
   </div>
   <div class="col-md-2">
-    <select id="marketing_3_priority" class="form-control">
+    <select name="marketing_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
