--- a/app/views/partials/_challenges_strategic.html.erb
+++ b/app/views/partials/_challenges_strategic.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Strategic Planning</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="actual_staff_strategic" placeholder="FTEs (actual)" min="0">
+    <input type="number" class="form-control" name="actual_staff_strategic" placeholder="FTEs (actual)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="current_staff_strategic" placeholder="FTEs (current)" min="0">
+    <input type="number" class="form-control" name="current_staff_strategic" placeholder="FTEs (current)" min="0">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" id="projected_staff_strategic" placeholder="FTEs (projected)" min="0">
+    <input type="number" class="form-control" name="projected_staff_strategic" placeholder="FTEs (projected)" min="0">
   </div>
   <br>
 </div>
@@ -15,10 +15,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="strategic_challenge_1" placeholder="1. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_1" placeholder="1. Enter a strategic planning challenge">
   </div>
   <div class="col-md-2">
-    <select id="strategic_1_priority" class="form-control">
+    <select name="strategic_1_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -30,10 +30,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge">
   </div>
   <div class="col-md-2">
-    <select id="strategic_2_priority" class="form-control">
+    <select name="strategic_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -45,10 +45,10 @@
 <div class="row form-group">
   <div class="col-md-2"></div>
   <div class="col-md-5">
-    <input type="text" class="form-control" id="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge">
+    <input type="text" class="form-control" name="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge">
   </div>
   <div class="col-md-2">
-    <select id="strategic_3_priority" class="form-control">
+    <select name="strategic_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
