--- a/app/views/partials/_contact_info.html.erb
+++ b/app/views/partials/_contact_info.html.erb
@@ -2,63 +2,63 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="organization">Organization:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="organization" placeholder="Enter organization name">
+        <input type="text" class="form-control" name="organization" placeholder="Enter organization name" value="<%= @loi_form.organization %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="website">Address:</label>
       <div class="col-sm-10">          
-        <input type="text" class="form-control" id="address" placeholder="Enter street address">
+        <input type="text" class="form-control" name="address" placeholder="Enter street address" value="<%= @loi_form.address %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="phone">Phone:</label>
       <div class="col-sm-10">          
-        <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
+        <input type="tel" class="form-control" name="phone" placeholder="Enter phone number" value="<%= @loi_form.phone %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="website">Website:</label>
       <div class="col-sm-10"> 
-        <input type="url" class="form-control" id="website" placeholder="https://">
+        <input type="url" class="form-control" name="website" placeholder="https://" value="<%= @loi_form.website %>">
       </div>
     </div>
     <hr>
     <div class="form-group">
       <label class="control-label col-sm-2" for="executive">Executive Director:</label>
       <div class="col-sm-10"> 
-        <input type="text" class="form-control" id="executive" placeholder="Enter name">
+        <input type="text" class="form-control" name="executive" placeholder="Enter name" value="<%= @loi_form.executive %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="executive_phone">Phone:</label>
       <div class="col-sm-10"> 
-        <input type="tel" class="form-control" id="executive_phone" placeholder="Enter phone">
+        <input type="tel" class="form-control" name="executive_phone" placeholder="Enter phone" value="<%= @loi_form.executive_phone %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="executive_email">Email:</label>
       <div class="col-sm-10"> 
-        <input type="email" class="form-control" id="executive_email" placeholder="Enter email address">
+        <input type="email" class="form-control" name="executive_email" placeholder="Enter email address" value="<%= @loi_form.executive_email %>">
       </div>
     </div>
     <hr>
     <div class="form-group">
       <label class="control-label col-sm-2" for="contact">Proposal Contact:</label>
       <div class="col-sm-10"> 
-        <input type="text" class="form-control" id="contact" placeholder="Enter name and title">
+        <input type="text" class="form-control" name="contact" placeholder="Enter name and title" value="<%= @loi_form.contact %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="contact_phone">Phone:</label>
       <div class="col-sm-10"> 
-        <input type="tel" class="form-control" id="contact_phone" placeholder="Enter phone">
+        <input type="tel" class="form-control" name="contact_phone" placeholder="Enter phone" value="<%= @loi_form.contact_phone %>">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="contact_email">Email:</label>
       <div class="col-sm-10"> 
-        <input type="email" class="form-control" id="contact_email" placeholder="Enter email">
+        <input type="email" class="form-control" name="contact_email" placeholder="Enter email" value="<%= @loi_form.contact_email %>">
       </div>
     </div>
 <hr>    
