added section 2 organization columns to loi_form model

--- a/app/views/partials/_organization.html.erb
+++ b/app/views/partials/_organization.html.erb
@@ -24,7 +24,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="budget">Total annual budget for organization:</label>
       <div class="col-sm-10"> 
-        <input type="text" class="form-control" name="budget" placeholder="Enter annual budget">
+        <input type="number" class="form-control" name="budget" placeholder="Enter annual budget" min="0" step="0.01">
       </div>
     </div>
 
