--- a/app/views/partials/_contact_info.html.erb
+++ b/app/views/partials/_contact_info.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-10">
         <input type="text" class="form-control" name="organization" placeholder="Enter organization name" value="<%= @loi_form.organization %>">
       </div>
-    </div>
+    </divo
     <div class="form-group">
       <label class="control-label col-sm-2" for="website">Address:</label>
       <div class="col-sm-10">          
